manifests/epp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: llm-d-scale-epp
  namespace: llm-d-scale
spec:
  selector:
    inferencepool: llm-d-scale-epp
  ports:
    - name: grpc-ext-proc
      protocol: TCP
      port: 9002
    - name: http-metrics
      protocol: TCP
      port: 9090
    - name: zmq
      port: 5557
      protocol: TCP
      targetPort: 5557
  type: ClusterIP
