manifests/model-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: llm-d-scale-model
  namespace: llm-d-scale
spec:
  selector:
    app: llm-d-scale
  ports:
    - name: http
      port: 8000
  type: ClusterIP
